removed manual check for definition from endpoints started fixing tests to work with AC Started fixing code to ignore authorization whenever it makes sense